fixed titlebar; fixed sidenav alignment;

--- a/clients/desktop/src/app/sidenav/sidenav.component.scss
+++ b/clients/desktop/src/app/sidenav/sidenav.component.scss
@@ -2,7 +2,7 @@
 
 #sidenav-container {
   position: absolute;
-  top: 60px;
+  top: 100px;
   bottom: 60px;
   left: 0;
   right: 0;
